--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -21,7 +21,20 @@
     {% for transaction in transactions_list %}
         <tr class="legible">
             <td>{{ transaction.0.id }}</td>
-            <td><a href="{% url 'app:detail_1' 'index' transaction.0.id %}">{{ transaction.0.first_name }} {{ transaction.0.last_name }}</a></td>
+            <td><a href="{% url 'app:detail_1' 'index' transaction.0.id %}">
+                {% if transaction.0.is_for_bike %}
+                    {% if transaction.0.rental_bike %}
+                        Rental: {{transaction.0.rental_bike.color}} {{transaction.0.rental_bike.model}}
+                    {% elif transaction.0.refurbished_bike %}
+                        Refurbished: {{transaction.0.refurbished_bike.color}} {{transaction.0.refurbished_bike.model}}
+                    {% else %}
+                        Buy Back: {{transaction.0.buy_back_bike.color}} {{transaction.0.buy_back_bike.model}}
+                    {% endif %}
+                {% else %}
+                    {{ transaction.0.first_name }} {{ transaction.0.last_name }}
+                {% endif %}
+
+            </a></td>
             <td>
                 {{ transaction.0.service_description|slice:":75" }}
                 {% if transaction.1 %}
