--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -36,7 +36,7 @@
 
             </a></td>
             <td>
-                {{ transaction.0.service_description|slice:":75" }}
+                {{ transaction.0.bike_description|slice:":75" }}
                 {% if transaction.1 %}
                     <br>
                     <b>Tasks: </b>
