--- a/app/templates/app/history.html
+++ b/app/templates/app/history.html
@@ -19,8 +19,8 @@
             <td><a href="{% url 'app:detail_1' 'history' transaction.id %}">
                 {{ transaction.first_name }} {{ transaction.last_name }}</a></td>
             <td>
-                {{ transaction.service_description|slice:":75" }}
-                {% if transaction.service_description|length > 75  %}...{% endif %}
+                {{ transaction.bike_description|slice:":75" }}
+                {% if transaction.bike_description|length > 75  %}...{% endif %}
             </td>
         </tr>
     {% endfor %}
