--- a/app/templates/app/refurbished_detail.html
+++ b/app/templates/app/refurbished_detail.html
@@ -12,8 +12,8 @@
             <td><a href="{% url 'app:detail_2' bike_pk 'refurbished_detail' transaction.id  %}">{{ transaction.first_name }} {{ transaction.last_name }}</a></td>
             <td>{{ transaction.email }}</td>
             <td>
-                {{ transaction.service_description|slice:":75" }}
-                {% if transaction.service_description|length > 75  %}...{% endif %}
+                {{ transaction.bike_description|slice:":75" }}
+                {% if transaction.bike_description|length > 75  %}...{% endif %}
             </td>
         </tr>
     {% endfor %}
