--- a/app/templates/app/rental_detail.html
+++ b/app/templates/app/rental_detail.html
@@ -16,7 +16,7 @@
 
             <td>{{ transaction.email }}</td>
             <td>
-                {{ transaction.service_description|slice:":75" }}
+                {{ transaction.bike_description|slice:":75" }}
             </td>
         </tr>
     {% endfor %}
