--- a/app/templates/app/assign_items.html
+++ b/app/templates/app/assign_items.html
@@ -45,6 +45,7 @@
                             </div>
 
                             {{ tuple.2 | bootstrap }}
+
                             {% if tuple.3 == True or tuple.3 == False %}
                                 <select name="task_{{item.name|join_whitespace}}" class="form-control">
                                     {% if tuple.3 == True %}
@@ -93,6 +94,7 @@
                                        {% if bool %} checked="checked "{% endif %}/>
                             </div>
                             {{ tuple.2 | bootstrap }}
+                            {{ tuple.3 | bootstrap }}
                         </div>
                     </div>
                 {% endwith %}
