changed customer to inpatient

--- a/app/templates/app/create_transaction.html
+++ b/app/templates/app/create_transaction.html
@@ -17,7 +17,7 @@
             <div class="fieldWrapper">
                 <label class="control-label  " for="bike_type">Transaction Type</label>
                 <select id="bike_type" class="form-control">
-                    <option value="customer_bike">Customer</option>
+                    <option value="customer_bike">Inpatient</option>
                     <option value="refurbished_bike">Refurbished Bike Maintenance</option>
                     <option value="buy_back_bike">Buy-Back Bike Maintenance</option>
                     <option value="rental_bike">Rental Bike Maintenance</option>
