--- a/app/templates/app/assign_items.html
+++ b/app/templates/app/assign_items.html
@@ -93,6 +93,7 @@
                                        {% if bool %} checked="checked "{% endif %}/>
                             </div>
                             {{ tuple.2 | bootstrap }}
+                            {{ tuple.3 | bootstrap }}
                         </div>
                     </div>
                 {% endwith %}
