--- a/app/templates/app/create_transaction.html
+++ b/app/templates/app/create_transaction.html
@@ -18,6 +18,7 @@
                 <label class="control-label  " for="bike_type">Transaction Type</label>
                 <select id="bike_type" class="form-control">
                     <option value="customer_bike">Inpatient</option>
+                    <option value="outpatient">Outpatient</option>
                     <option value="refurbished_bike">Refurbished Bike Maintenance</option>
                     <option value="buy_back_bike">Buy-Back Bike Maintenance</option>
                     <option value="rental_bike">Rental Bike Maintenance</option>
