--- a/app/templates/app/sold_items.html
+++ b/app/templates/app/sold_items.html
@@ -7,9 +7,15 @@
     <a href="{% url 'app:sold_parts' %}" class="btn btn-default btn-lg btn-skinny" role="button">Parts</a>
 </div>
 <br>
-<div class="btn-group btn-group-justified" role="group" aria-label="...">
-    <a href="{% url 'app:sold_accessories' %}" class="btn btn-default btn-lg btn-skinny" role="button">Accessories</a>
-    <a href="{% url 'app:sold_buy_backs' %}" class="btn btn-default btn-lg btn-skinny" role="button">Buy Backs</a>
-</div>
+<form action="." method="post" role="form">
+    {% csrf_token %}
+    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+        <a href="{% url 'app:sold_accessories' %}" class="btn btn-default btn-lg btn-skinny" role="button">Accessories</a>
+        <a href="{% url 'app:sold_buy_backs' %}" class="btn btn-default btn-lg btn-skinny" role="button">Buy Backs</a>
+        <div class="btn-group" role="group">
+            <button type="submit" name="export" class="btn btn-default btn-lg btn-skinny">Export</button>
+        </div>
+    </div>
+</form>
 
 {% endblock %}
