--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -24,7 +24,7 @@
             <td><a href="{% url 'app:detail_1' 'index' transaction.0.id %}">
                 {% if transaction.0.is_for_bike %}
                     {% if transaction.0.rental_bike %}
-                        Rental: {{transaction.0.rental_bike.color}} {{transaction.0.rental_bike.model}}
+                        Rental {{transaction.0.rental_bike.vin}}: {{transaction.0.rental_bike.color}} {{transaction.0.rental_bike.model}}
                     {% elif transaction.0.refurbished_bike %}
                         Refurbished: {{transaction.0.refurbished_bike.color}} {{transaction.0.refurbished_bike.model}}
                     {% else %}
@@ -36,13 +36,19 @@
 
             </a></td>
             <td>
-                {{ transaction.0.bike_description|slice:":75" }}
-                {% if transaction.1 %}
-                    <br>
-                    <b>Tasks: </b>
-                    {% for task in transaction.1 %}
-                        {{ task.menu_item.name }}{% if forloop.counter != transaction.1|length%},{% endif %}
-                    {% endfor %}
+                {% if transaction.0.is_for_bike %}
+                    {% if transaction.0.rental_bike %}
+                         
+                    {% endif %}
+                {% else %}
+                    {{ transaction.0.bike_description|slice:":75" }}
+                    {% if transaction.1 %}
+                        <br>
+                        <b>Tasks: </b>
+                        {% for task in transaction.1 %}
+                            {{ task.menu_item.name }}{% if forloop.counter != transaction.1|length%},{% endif %}
+                        {% endfor %}
+                    {% endif %}
                 {% endif %}
             </td>
         </tr>
