Added status to Part model, show part on order page

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -5,7 +5,7 @@
 <div class="btn-group btn-group-justified" role="group" aria-label="...">
     <a href="{% url 'app:bike_inventory' %}" class="btn btn-default btn-lg btn-skinny" role="button" >Our Bikes</a>
     <a href="{% url 'app:sold_items' %}" class="btn btn-default btn-lg btn-skinny" role="button" >Sold Items</a>
-    <a href="{% url 'app:make_order' %}" class="btn btn-default btn-lg btn-skinny" role="button" >Order Part</a>
+    <a href="{% url 'app:orders' %}" class="btn btn-default btn-lg btn-skinny" role="button" >Orders</a>
 
 </div>
 {% if transactions_list %}
