Added part status to Assign Items page

--- a/app/templates/app/assign_items.html
+++ b/app/templates/app/assign_items.html
@@ -90,13 +90,21 @@
                 {% with bool=tuple.1 %}
                     <div class="fieldWrapper">
                         <div class="form-group">
-                            <label class="control-label  " for="id_1-{{ part_item.name|join_whitespace }}">{{ part_item.name }}</label>
+                            <label class="control-label  " for="id_1-{{ part_item.name|join_whitespace }}-assigned">{{ part_item.name }}</label>
                             <div class=" ">
-                                <input class="form-control" id="id_1-{{ part_item.name|join_whitespace }}" name="part_{{part_item.name|join_whitespace}}" type="checkbox"
+                                <input class="form-control" id="id_1-{{ part_item.name|join_whitespace }}-assigned" name="part_{{part_item.name|join_whitespace}}_assigned" type="checkbox"
                                        {% if bool %} checked="checked "{% endif %}/>
                             </div>
                             {{ tuple.2 | bootstrap }}
                             {{ tuple.3 | bootstrap }}
+                            <select name="part_{{part_item.name| join_whitespace}}_status" class="form-control">
+                                <option>{{ tuple.4 }}</option>
+                                {% for status_tup in part_status_choices %}
+                                    {% if status_tup.1 != tuple.4 %}
+                                        <option>{{ status_tup.1 }}</option>
+                                    {% endif %}
+                                {% endfor %}
+                            </select>
                         </div>
                     </div>
                 {% endwith %}
