--- a/app/templates/app/detail_base.html
+++ b/app/templates/app/detail_base.html
@@ -221,8 +221,6 @@
 <div class="panel panel-primary">
     <div class="panel-body parts-panel">
         {% if num_parent_args == 1 %}
-
-
             <div class="btn-group btn-group-justified" role="group" aria-label="...">
                 <a class="btn btn-default btn-pad"
                    href="{% url 'app:'|add:parent_url %}"
@@ -230,6 +228,9 @@
                 <a class="btn btn-default btn-pad"
                    href="{% url 'app:edit_1' parent_url transaction.id %}"
                    role="button">Edit</a>
+                <a class="btn btn-default"
+                    onclick="displayAlert()"
+                    role="button">Delete</a>
             </div>
         {%  elif num_parent_args == 2 %}
             <div class="btn-group btn-group-justified blocks" role="group" aria-label="...">
@@ -239,9 +240,17 @@
                 <a class="btn btn-default"
                    href="{% url 'app:edit_2' bike_pk parent_url transaction.id %}"
                    role="button">Edit</a>
+                <a class="btn btn-default"
+                     onclick="displayAlert()"
+                     role="button">Delete</a>
             </div>
         {% endif %}
-
+        <script>
+           function displayAlert() {
+               if (confirm('Are you sure you want to delete this transaction?'))
+                   location.href = ("{% url 'app:delete_transaction' parent_url transaction.id %}");
+           }
+        </script>
 
 
 {% endblock %}
