Added subcategory field to Exported Sold Items csv

--- a/app/templates/app/sold_buy_backs.html
+++ b/app/templates/app/sold_buy_backs.html
@@ -34,7 +34,7 @@
             <td>${{ item.price }}</td>
             <td>{{ item.color }}</td>
             <td>{{ item.model }}</td>
-            <td>{{ item.transaction.date_submitted|date:"n/j" }}</td>
+            <td>{{ item.date_submitted|date:"n/j" }}</td>
         </tr>
     {% endfor %}
 </table>
