--- a/app/templates/app/detail_base.html
+++ b/app/templates/app/detail_base.html
@@ -126,7 +126,7 @@
                 <td class="col-sm-1"><b>$</b></td>
                 <td class="col-sm-1"><b>Status</b></td>
 
-                <td class="col-sm-1"><b>Completed</b></td>
+                <td class="col-sm-1"><b>Comp</b></td>
             </thead>
             {% for part in parts %}
                 <tr>
@@ -255,10 +255,11 @@
            }
         </script>
 
-
-{% endblock %}
-
         {% block detail %}
         {% endblock %}
     </div>
 </div>
+{% endblock %}
+
+
+
