--- a/app/templates/app/edit.html
+++ b/app/templates/app/edit.html
@@ -33,6 +33,7 @@
         <input class=" form-control" id="id_cost" maxlength="500"
                   name="cost" type="number" value="{{transaction_form.cost.value }}">
         {{ transaction_form.amount_paid | bootstrap }}
+        {{ transaction_form.email | bootstrap }}
 
     </div>
         </div>
