--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -9,10 +9,10 @@
           rel="stylesheet" media="screen">
     <script src="{% static 'js/jquery-2.1.4.min.js' %}"
             type="text/javascript"
-            charset="utf-8" defer></script>
+            charset="utf-8"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"
             type="text/javascript"
-            charset="utf-8" defer></script>
+            charset="utf-8"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1,
                               maximum-scale=1, user-scalable=0"/>
@@ -30,7 +30,7 @@
                 <td>
                     {% if user.is_anonymous %}
                         <a href="{% url 'app:login' %}">Log In</a>
-                        {% else %}
+                    {% else %}
                         <a href="{% url 'app:logout' %}" class=".login-text">Log Out</a>
                         <span class=".login-text">{{ user }} |&nbsp</span>
                     {% endif %}
@@ -43,23 +43,21 @@
     <div class="btn-group btn-group-justified" role="group" aria-label="...">
       {% if home %}
         <a href="/new" class="btn btn-default btn-lg btn-skinny" role="button" name='new_transaction'>
-          <img class="button-pic" src="/app/static/img/add.png" alt="New transaction"/>
+          <img id="add-pic" class="button-pic" src="/app/static/img/add.png" alt="New transaction"/>
         </a>
       {% else %}
         <a href="/" class="btn btn-default btn-lg btn-skinny" role="button" name='home'>
-          <img class="button-pic" src="/app/static/img/home.png" alt="Home"/>
+          <img id="home-pic" class="button-pic" src="/app/static/img/home.png" alt="Home"/>
         </a>
       {% endif %}
         <a href="/history" class="btn btn-default btn-lg btn-skinny" role="button" name='past_transactions'>
-          <img class="button-pic" src="/app/static/img/clock.png"/>
+          <img id="clock-pic" class="button-pic" src="/app/static/img/clock.png"/>
         </a>
         <a href="/balance" class="btn btn-default btn-lg btn-skinny" role="button" name='balance'>
           <img class="button-pic" src="/app/static/img/money.png"/>
         </a>
     </div>
     {% block content %}
-    {% endblock %}
-    {% block detail %}
     {% endblock %}
 
         <div id="footercontainer">
