--- a/app/templates/app/sold_items.html
+++ b/app/templates/app/sold_items.html
@@ -3,19 +3,23 @@
 {% block content %}
 <br>
 <div class="btn-group btn-group-justified" role="group" aria-label="...">
-    <a href="{% url 'app:sold_tasks' %}" class="btn btn-default btn-lg btn-skinny" role="button">Tasks</a>
-    <a href="{% url 'app:sold_parts' %}" class="btn btn-default btn-lg btn-skinny" role="button">Parts</a>
+    <a id="tasks" href="{% url 'app:sold_tasks' %}" class="btn btn-default btn-lg btn-skinny" role="button">Tasks</a>
+    <a id="parts" href="{% url 'app:sold_parts' %}" class="btn btn-default btn-lg btn-skinny" role="button">Parts</a>
 </div>
 <br>
 <form action="." method="post" role="form">
     {% csrf_token %}
     <div class="btn-group btn-group-justified" role="group" aria-label="...">
-        <a href="{% url 'app:sold_accessories' %}" class="btn btn-default btn-lg btn-skinny" role="button">Accessories</a>
-        <a href="{% url 'app:sold_buy_backs' %}" class="btn btn-default btn-lg btn-skinny" role="button">Buy Backs</a>
+        <a id="accessories" href="{% url 'app:sold_accessories' %}" class="btn btn-default btn-lg btn-skinny" role="button">Acc'ries</a>
+        <a id="buy_backs"href="{% url 'app:sold_buy_backs' %}" class="btn btn-default btn-lg btn-skinny" role="button">Buy Backs</a>
         <div class="btn-group" role="group">
             <button type="submit" name="export" class="btn btn-default btn-lg btn-skinny">Export</button>
         </div>
     </div>
 </form>
 
+{% block specific %}
 {% endblock %}
+
+{% endblock %}
+
